<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".Fragments.ui.login.LoginFragment">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/tvPinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_pin_to_unlock"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Dãy PIN -->
    <LinearLayout
        android:id="@+id/pinContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvPinTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <EditText
            android:id="@+id/pin1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/pin2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/pin3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/pin4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/pin5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/pin6"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/pin_box"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:importantForAccessibility="no"/>

    </LinearLayout>

    <!-- Hàng: hiển thị/ẩn PIN -->
    <LinearLayout
        android:id="@+id/VisibleView"
        android:layout_width="363dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinContainer">

        <TextView
            android:id="@+id/tvVisibleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/str_VisibleText"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/btnTogglePin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/visible_button"
            android:src="@drawable/ic_visibility_30"
            app:tint="@color/light_blue_900" />

    </LinearLayout>


    <!-- Hàng: gợi ý + nút vân tay -->
    <LinearLayout
        android:id="@+id/fingerPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/VisibleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/tvFingerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_FingerText"
            android:textSize="17sp"
            android:textColor="@color/light_blue_900"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnFingerprint"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_fingerprint_24"
            app:tint="@color/light_blue_900"
            android:importantForAccessibility="no"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
